# advent-2024

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: main.rs
src/core/: data.rs  mod.rs  pos.rs  settings.rs  utils.rs
src/day/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/lib/: mod.rs  pos.rs  walked.rs
src/utils/: data.rs  mod.rs
