[package]
name = "advent"
version = "2024.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
config = "0.14.1"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }

[lib]
path = "src/lib/mod.rs"
